--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-全世界最差的语言：php,java,python,ruby,perl等等
-全世界不好不坏的语言：c,c++
-全世界最好的语言:c#,vb6,vba
+全世界最差的语言：php,java,python,ruby,perl等等<br>
+全世界不好不坏的语言：c,c++<br>
+全世界最好的语言:c#,vb6,vba<br>
 </body>
 </html>
